--- a/20191202/20191202.vcxproj
+++ b/20191202/20191202.vcxproj
@@ -115,6 +115,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ChainHash.h" />
+    <ClInclude Include="Member.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="ChainHash.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
